# vmix-todoapp

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  task_edit.cpp  task_edit.h  task_list.cpp  task_list.h  task_object.cpp  task_object.h  window.cpp  window.h
